Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ Near the corners of the maze are four larger, flashing dots known as power pelle
 Enemies<br>
 The enemies in Pac-Man are known variously as "monsters" and "ghosts".
 Despite the seemingly random nature of the enemies, their movements are strictly deterministic, which players have used to their advantage. In an interview, creator Toru Iwatani stated that he had designed each enemy with its own distinct personality in order to keep the game from becoming impossibly difficult or boring to play. More recently, Iwatani described the enemy behaviors in more detail at the 2011 Game Developers Conference. He stated that the red enemy chases Pac-Man, and the pink and blue enemies try to position themselves in front of Pac-Man's mouth. Although he claimed that the orange enemy's behavior is random, a careful analysis of the game's code reveals that it actually chases Pac-Man most of the time, but also moves toward the lower-left corner of the maze when it gets too close to Pac-Man.
-Although Midway's 1980 flyer for Pac-Man used both the terms "monsters" and "ghost monsters".</p>
+Although Midway's 1980 flyer for Pac-Man used both the terms "monsters" and "ghost monsters".
+<img src="http://www.unixstickers.com/image/data/stickers/pacman/Pacman-main-char.sh.png" alt=""></p>
       </section>
     </div>
 
