--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <h1>
 <a id="game-essay" class="anchor" href="#game-essay" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Game Essay</h1>
 
+<p><img src="http://www.unixstickers.com/image/data/stickers/pacman/Pacman-main-char.sh.png" alt="Pacman"></p>
+
 <p>PAC-MAN, is an arcade game developed by Namco and first released in Japan in May 1980. It was created by Japanese video game designer Toru Iwatani. It was licensed for distribution in the United States by Midway and released in October 1980. Immensely popular from its original release to the present day, Pac-Man is considered one of the classics of the medium, and an icon of 1980s popular culture. Upon its release, the game—and, subsequently, Pac-Man derivatives—became a social phenomenon that yielded high sales of merchandise and inspired a legacy in other media, such as the Pac-Man animated television series and the top-ten hit single "Pac-Man Fever". Pac-Man was popular in the 1980s and 1990s and is still played in the 2010s.
 When Pac-Man was released, the most popular arcade video games were space shooters, in particular, Space Invaders and Asteroids. The most visible minority were sports games that were mostly derivatives of Pong. Pac-Man succeeded by creating a new genre. Pac-Man is often credited with being a landmark in video game history and is among the most famous arcade games of all time. It is also one of the highest-grossing video games of all time, having generated more than $2.5 billion in quarters by the 1990s.
 The character has appeared in more than 30 officially licensed game spin-offs, as well as in numerous unauthorized clones and bootlegs. According to the Davie-Brown Index, Pac-Man has the highest brand awareness of any video game character among American consumers, recognized by 94 percent of them. Pac-Man is one of the longest running video game franchises from the golden age of video arcade games. It is part of the collection of the Smithsonian Institution in Washington, D.C. and New York's Museum of Modern Art.
@@ -40,8 +42,9 @@ Near the corners of the maze are four larger, flashing dots known as power pelle
 Enemies<br>
 The enemies in Pac-Man are known variously as "monsters" and "ghosts".
 Despite the seemingly random nature of the enemies, their movements are strictly deterministic, which players have used to their advantage. In an interview, creator Toru Iwatani stated that he had designed each enemy with its own distinct personality in order to keep the game from becoming impossibly difficult or boring to play. More recently, Iwatani described the enemy behaviors in more detail at the 2011 Game Developers Conference. He stated that the red enemy chases Pac-Man, and the pink and blue enemies try to position themselves in front of Pac-Man's mouth. Although he claimed that the orange enemy's behavior is random, a careful analysis of the game's code reveals that it actually chases Pac-Man most of the time, but also moves toward the lower-left corner of the maze when it gets too close to Pac-Man.
-Although Midway's 1980 flyer for Pac-Man used both the terms "monsters" and "ghost monsters".
-<img src="http://www.unixstickers.com/image/data/stickers/pacman/Pacman-main-char.sh.png" alt=""></p>
+Although Midway's 1980 flyer for Pac-Man used both the terms "monsters" and "ghost monsters".</p>
+
+<p><img src="http://www.unixstickers.com/image/data/stickers/pacman/Pacman-main-char.sh.png" alt="Pacman"></p>
       </section>
     </div>
 
